merge Feature Security UserPasswordAndLoginModel Advanced