@@ -18,6 +18,83 @@
         <log4j-api.version>2.12.0</log4j-api.version>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>jenkins-keyword</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.1.1</version>
+                        <executions>
+                            <execution>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                                <configuration>
+                                    <mainClass>com.yeastar.untils.testCreateXml</mainClass>
+                                    <arguments>
+                                        <argument>${argument}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <!--                <version>3.0.0-M4</version>-->
+                        <configuration>
+                            <runOrder>alphabetical</runOrder>
+                            <suiteXmlFiles>
+                                <suiteXmlFile>suite/${suiteXmlFile}</suiteXmlFile>
+                                <!--<testng outputDir="test-output/html/"/>-->0
+                            </suiteXmlFiles>
+                            <testFailureIgnore>true</testFailureIgnore>
+                            <!--                    add usersystemclassloader for vm crash-->
+                            <useSystemClassLoader>false</useSystemClassLoader>
+                            <!--                    关闭并发-->
+                            <forkMode>once</forkMode>
+                            <!--                    <forkMode>once</forkMode>-->
+                            <!--                    <forkCount>2.0C</forkCount>-->
+                            <!--                    <parallel>methods</parallel>-->
+                            <!--                    <threadCount>5</threadCount>-->
+                            <argLine>-Dfile.encoding=UTF-8 </argLine>
+                            <argLine>-Xmx1024m -Xms256m -XX:PermSize=256 -XX:MaxPermSize=1024</argLine>
+                            <argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"</argLine>
+
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+
+                            <!--  让allure-results，在target文件下生成-->
+                            <systemProperties>
+                                <property>
+                                    <name>allure.results.directory</name>
+                                    <value>./allure-results</value>
+                                </property>
+                            </systemProperties>
+                            <systemPropertyVariables>
+                                <java.library.path>${project.build.directory}/classes</java.library.path>
+                                <serviceBuildName>${serviceBuildName}</serviceBuildName>
+                            </systemPropertyVariables>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.aspectj</groupId>
+                                <artifactId>aspectjweaver</artifactId>
+                                <version>${aspectj.version}</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     
     <build>
 
@@ -45,6 +122,12 @@
         </resources>
 
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1.1</version>
+            </plugin>
+
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
@@ -112,6 +195,31 @@
     </build>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.sun.mail </groupId>
+            <artifactId>javax.mail </artifactId>
+            <version>1.5.4 </version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.influxdb</groupId>
+            <artifactId>influxdb-java</artifactId>
+            <version>2.19</version>
+        </dependency>
+        <!-- for exception [ org/w3c/dom/ElementTraversal ]-->
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.4.01</version>
+        </dependency>
+
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
 
         <dependency>
             <groupId>co.boorse</groupId>
